force-app/main/default/objects/nimba_ZoomMeeting__c/nimba_ZoomMeeting__c.object-meta.xml
<CustomObject>
    <label>nimba_ZoomMeeting</label>
    <nameField>
        <label>nimba_ZoomMeeting name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>nimba_ZoomMeetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>