force-app/main/default/objects/nimba_ZoomMeeting__c/fields/nimba_ZoomEvent__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomEvent__c</fullName>
    <description>The name of the event.</description>
    <label>nimba_ZoomMeetingEvent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>