force-app/main/default/objects/nimba_ZoomMeeting__c/fields/nimba_ZoomMeetingDuration__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomMeetingDuration__c</fullName>
    <label>nimba_ZoomMeetingDuration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>