force-app/main/default/objects/nimba_ZoomMeeting__c/fields/nimba_ZoomMeetingID__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomMeetingID__c</fullName>
    <description>The meeting ID.</description>
    <label>nimba_ZoomMeetingID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>