force-app/main/default/objects/nimba_ZoomMeeting__c/fields/nimba_ZoomMeetingJoinURL__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomMeetingJoinURL__c</fullName>
    <label>nimba_ZoomMeetingJoinURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>