force-app/main/default/objects/nimba_ZoomMeeting__c/fields/nimba_ZoomMeetingStartTime__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomMeetingStartTime__c</fullName>
    <description>The meeting&apos;s start time.</description>
    <label>nimba_ZoomMeetingStartTime</label>
    <type>DateTime</type>
</CustomField>