force-app/main/default/objects/nimba_ZoomMeeting__c/fields/nimba_ZoomMeetingTimeZone__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomMeetingTimeZone__c</fullName>
    <description>The meeting&apos;s timezone.</description>
    <label>nimba_ZoomMeetingTimeZone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>