force-app/main/default/objects/nimba_ZoomMeeting__c/fields/nimba_ZoomMeetingTopic__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomMeetingTopic__c</fullName>
    <description>The meeting&apos;s topic.</description>
    <label>nimba_ZoomMeetingTopic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>