force-app/main/default/objects/nimba_ZoomMeeting__c/fields/nimba_ZoomMeetingType__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomMeetingType__c</fullName>
    <label>nimba_ZoomMeetingType</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>