force-app/main/default/objects/nimba_ZoomMeeting__c/fields/nimba_ZoomMeetingUUID__c.field-meta.xml
<CustomField>
    <fullName>nimba_ZoomMeetingUUID__c</fullName>
    <description>The meeting&apos;s universally unique identifier (UUID). Each meeting instance generates a meeting UUID.</description>
    <externalId>true</externalId>
    <label>nimba_ZoomMeetingUUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>